# text2aks

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_text2akss.py
text2aks/: __init__.py  elements.py  fonts_data.py  interfaces.py  picture_maker.py
