[tool.poetry]
name = "text2aks"
version = "0.1.0"
description = ""
authors = ["ImanHpr <imanhpr1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.950"
types-Pillow = "^9.0.15"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
